# regitrkn

./: .replit  README.md  app.py  chat_request.py  main.py  models.py  pyproject.toml  requirements.txt  routes.py
static/css/: custom.css
static/js/: charts.js  chat.js
templates/: 404.html  500.html  base.html  chat.html  dashboard.html  exercise.html  login.html  meal_plan.html  photos.html  progress_report.html  register.html
